add typekit fonts; cleanup css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <!-- Mobile IE allows us to activate ClearType technology for smoothing fonts for easy reading -->
   <meta http-equiv="cleartype" content="on">
   <!-- more tags for your 'head' to consider https://gist.github.com/849231 -->
+  <script type="text/javascript" src="http://use.typekit.com/djk1tvi.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css?v=1">
 </head>
